--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "author": "Pittawat Taveekitworachai",
   "license": "MIT",
   "scripts": {
-    "server": "node server/server.js"
+    "server": "node server/server.js",
+    "client": "cd client && yarn dev",
+    "dev": "concurrently 'yarn server' 'yarn client'",
+    "start": "cd client && yarn export && cd .. && yarn server"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -19,6 +22,7 @@
     "express": "^4.17.1",
     "express-session": "^1.16.2",
     "helmet": "^3.19.0",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
@@ -26,6 +30,7 @@
     "mysql": "^2.17.1",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "sequelize": "^5.10.2"
   }
