--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "compression": "^1.7.4",
     "connect-session-sequelize": "^6.0.0",
     "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "csurf": "^1.10.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
@@ -32,6 +33,7 @@
     "passport-facebook": "^3.0.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
-    "sequelize": "^5.10.2"
+    "sequelize": "^5.10.2",
+    "socket.io": "^2.2.0"
   }
 }
